--- a/i3.config
+++ b/i3.config
@@ -33,7 +33,7 @@ disk "/" {
 }
 
 memory {
-    format = "%used | %available"
+    format = "%used + %available"
     threshold_degraded = "1G"
     format_degraded = "MEMORY < %available"
 }
